blaze persistence 종속성 제거, 기타 warning 수정